
h1. CHANGELOG

h3. Version 11

* Bug fix for runscripts.

h3. Version 10

* Bug fixes for runscripts
* temp files are written one by one instead of writing them altogether.

h3. Version 9

* Minor bug fixes for gzip support

h3. Version 8

* Added CHANGELOG

h3. Version 7

* Manual override for interface list added for zipping paths.
* Manual reading of interface lists changed to a function
* helpers renamed to tistools_helpers to avoid clash with TPS wrapper code.

h3. Version 6

* Double loops modified to run on python 2.6.6